# kauma

./: .gitignore  Cargo.toml  build
.github/workflows/: kauma.yaml
src/: lib.rs  main.rs
src/tasks/: mod.rs
src/tasks/tasks01/: block2poly.rs  gcm.rs  gcm_crack.rs  gfmul.rs  mod.rs  pad_oracle.rs  pfmath.rs  poly2block.rs  sea128.rs  xex.rs
src/test_json/: b2p_p2b_example.json  block2poly_example.json  kauma_tests.json  parse_example.json  sea128.json
src/utils/: ciphers.rs  dff.rs  edf.rs  field.rs  math.rs  mod.rs  parse.rs  poly.rs  sff.rs
test_json/: gcm_decrypt_aes.json  gcm_decrypt_sea.json  gcm_encrypt.json  gcm_encrypt_sea.json  kauma_tests.json  padding_long.json  padding_oracle.json  parse_example.json  pfmath_tests.json  poly_algs.json  sandbox.json  xex_tests.json
