[package]
name = "kauma"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
base64 = "0.22.1"
openssl = "0.10.68"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
