[package]
name = "kauma"
version = "0.1.0"
edition = "2021"
rust = "1.75"

[dependencies]
anyhow = "1.0.91"
base64 = "0.22"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = "0.4"
rand = "0.8"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"

[profile.profiling]
inherits = "release"
debug = true
